--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=URLShorteningService
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/url_shortening_service_db
+spring.jpa.database=POSTGRESQL
+spring.datasource.username=st4rdusted
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
