--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=URLShorteningService
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/url_shortening_service_db
+spring.datasource.url= jdbc:postgresql://postgres:5432/postgres
 spring.jpa.database=POSTGRESQL
 spring.datasource.username=st4rdusted
 spring.datasource.password=postgres
